adding min-max heap implementation

--- a/min-max-heap/min-max-heap/min-max-heap.vcxproj
+++ b/min-max-heap/min-max-heap/min-max-heap.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="double_ended_priority_queue.h" />
+    <ClInclude Include="min_max_heap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
