--- a/min-max-heap/min-max-heap/min-max-heap.vcxproj.filters
+++ b/min-max-heap/min-max-heap/min-max-heap.vcxproj.filters
@@ -5,5 +5,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="double_ended_priority_queue.h" />
+    <ClInclude Include="min_max_heap.h" />
   </ItemGroup>
 </Project>
