adding empty heap exception

--- a/min-max-heap/min-max-heap.vcxproj
+++ b/min-max-heap/min-max-heap.vcxproj
@@ -160,6 +160,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="double_ended_priority_queue.h" />
+    <ClInclude Include="empty_heap_exception.h" />
     <ClInclude Include="extern\catch.h" />
     <ClInclude Include="min_max_heap.h" />
   </ItemGroup>
