--- a/min-max-heap/min-max-heap.vcxproj.filters
+++ b/min-max-heap/min-max-heap.vcxproj.filters
@@ -1,22 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="min_max_heap_test.cpp">
-      <Filter>test</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="extern\catch.h">
       <Filter>lib</Filter>
     </ClInclude>
-    <ClInclude Include="double_ended_priority_queue.h">
+    <ClInclude Include="src\min_max_heap.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="empty_heap_exception.h">
+    <ClInclude Include="src\double_ended_priority_queue.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="min_max_heap.h">
+    <ClInclude Include="src\empty_heap_exception.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
@@ -30,5 +24,13 @@
     <Filter Include="test">
       <UniqueIdentifier>{628de861-34b0-4d02-9713-1c5f92cedce2}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="test\min_max_heap_test.cpp">
+      <Filter>test</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
