refactor: rename catch.h to catch.hpp

--- a/min_max_heap/CMakeLists.txt
+++ b/min_max_heap/CMakeLists.txt
@@ -8,6 +8,6 @@ endif()
 
 include_directories("${CMAKE_SOURCE_DIR}/extern" "${CMAKE_SOURCE_DIR}/src")
 
-add_executable(min_max_heap "main.cpp" "test/min_max_heap_test.cpp")
+add_executable(min_max_heap "src/main.cpp" "test/min_max_heap_test.cpp")
 
 set_property(TARGET min_max_heap PROPERTY CXX_STANDARD 17)
