refactor: move main.cpp to top-level dir and remove redundant dir

--- a/min_max_heap/CMakeLists.txt
+++ b/min_max_heap/CMakeLists.txt
@@ -6,8 +6,8 @@ else()
   add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
 
-include_directories("${CMAKE_SOURCE_DIR}/extern" "${CMAKE_SOURCE_DIR}/src")
+include_directories("${CMAKE_SOURCE_DIR}/extern")
 
-add_executable(min_max_heap "src/main.cpp" "test/min_max_heap_test.cpp")
+add_executable(min_max_heap "main.cpp" "test/min_max_heap_test.cpp")
 
 set_property(TARGET min_max_heap PROPERTY CXX_STANDARD 17)
