fix: add cmake project

--- a/min_max_heap/CMakeLists.txt
+++ b/min_max_heap/CMakeLists.txt
@@ -1,4 +1,5 @@
 ﻿cmake_minimum_required (VERSION 3.8)
+project(min_max_heap)
 
 if(MSVC)
   add_compile_options(/W4 /WX)
@@ -6,7 +7,7 @@ else()
   add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
 
-include_directories("${CMAKE_SOURCE_DIR}/extern", "${CMAKE_SOURCE_DIR}/src")
+include_directories("${CMAKE_SOURCE_DIR}/extern" "${CMAKE_SOURCE_DIR}/src")
 
 add_executable(min_max_heap "main.cpp" "test/min_max_heap_test.cpp")
 
