refactor: improve cmakelists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 ﻿cmake_minimum_required (VERSION 3.8)
-project(min_max_heap)
+project (min_max_heap LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 17)
 
 if(MSVC)
   add_compile_options(/W4 /WX)
@@ -7,8 +8,5 @@ else()
   add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
 
-include_directories("${CMAKE_SOURCE_DIR}/extern" "${CMAKE_SOURCE_DIR}/src")
-
-add_executable(min_max_heap "main.cpp" "test/min_max_heap_test.cpp")
-
-set_property(TARGET min_max_heap PROPERTY CXX_STANDARD 17)
+include_directories(src/ extern/)
+add_executable (min_max_heap_test test/min_max_heap_test.cpp)
