Revert "refactor: rename directory"
This reverts commit 8c3c13e6b358b55997e9c075eb231cf15f0e4b8c.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ else()
   add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
 
-include_directories(src/ lib/)
+include_directories(src/ extern/)
 add_executable (min_max_heap_test test/min_max_heap_test.cpp)
